--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greetings</title>
-    <link rel="stylesheet" href="greet.css">
+   
+    <link rel="stylesheet" href="css/greet.css">
 
 </head>
 
@@ -14,18 +15,15 @@
 
     <div class="main">
         <h1>Greetings</h1>
-
-        <form class="greet">
-
+            <div class="six columns">
             <div class=" button">
                 <h2>Name</h2>
-                <input type="text" id="EnterYourName" placeholder="Name" name="name" required>
-            </div>
 
-
-            <div class="container">
-                <label class="first">
-                    <input type="radio" name="languages1" class="language" value="Siswati">
+                <form action="greetings" method="POST">
+                <input type="text" id="EnterYourName" placeholder="Name" name="enterName" required>
+                 
+                 <div>
+                 <input type="radio" name="languages1" class="language" value="Siswati">
                     <span class="label-body">Siswati</span>
                 </label>
 
@@ -39,6 +37,17 @@
                     <input type="radio" name="languages1" class="language" value="Tshivenda">
                     <span class="label-body">Tshivenda</span>
                 </label>
+                </div>
+                <div>
+                    <button class="button" type="submit" name="button"> Greet Me </button>
+
+                </div>
+                </form>            
+            </div>
+            </div>
+
+        <form action="action" method="POST">
+                   
 
 
             </div>
@@ -49,11 +58,11 @@
         <h2> Counter </h2>
         <span id="counter" value="counter"> </span>
         <div id="counter">  </div>
-       <button id="reset" type="button" name="reset" onclick="myReset()" value="reset"><span > RESET</span></button>
+       <button id="reset" type="button" name="reset" value="reset"><span > RESET</span></button>
     </div>
 
-    <button class="button" type="submit" name="button" onclick="myGreetings()"> Greet Me </button>
-
+    <form action="greetings" method="POST">
+    
 
     </form>
 
@@ -62,8 +71,8 @@
     <h3 id="heading"> </h3>
 
 
-   <script src="factory-function.js"></script>
-    <script src="greet.js"></script>
+   {{!-- <script src="factory-function.js"></script>
+    <script src="greet.js"></script> --}}
 
 </body>
 
