--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greetings</title>
-   
+
     <link rel="stylesheet" href="css/greet.css">
 
 </head>
@@ -15,63 +15,61 @@
 
     <div class="main">
         <h1>Greetings</h1>
-            <div class="six columns">
+        <div class="six columns">
             <div class=" button">
                 <h2>Name</h2>
 
                 <form action="greetings" method="POST">
-                <input type="text" id="EnterYourName" placeholder="Name" name="enterName" required>
-                 
-                 <div>
-                 <input type="radio" name="languages1" class="language" value="Siswati">
-                    <span class="label-body">Siswati</span>
-                </label>
+                    <input type="text" id="EnterYourName" placeholder="Name" name="enterName" required>
 
-                <label class="second">
-                    <input type="radio" name="languages1" class="language" value="Xitsonga">
-                    <span class="label-body">Xitsonga</span>
-                </label>
+                    <div>
+                        <input type="radio" name="languages1" class="language" value="Siswati">
+                        <span class="label-body">Siswati</span>
+                        </label>
+
+                        <label class="second">
+                            <input type="radio" name="languages1" class="language" value="Xitsonga">
+                            <span class="label-body">Xitsonga</span>
+                        </label>
 
 
-                <label class="third">
-                    <input type="radio" name="languages1" class="language" value="Tshivenda">
-                    <span class="label-body">Tshivenda</span>
-                </label>
-                </div>
-                <div>
-                    <button class="button" type="submit" name="button"> Greet Me </button>
+                        <label class="third">
+                            <input type="radio" name="languages1" class="language" value="Tshivenda">
+                            <span class="label-body">Tshivenda</span>
+                        </label>
+                    </div>
+                    <div>
+                        <button class="button" type="submit" name="button"> Greet Me </button>
 
-                </div>
-                </form>            
-            </div>
-            </div>
-
-        <form action="action" method="POST">
-                   
-
+                    </div>
 
             </div>
-        </form>
+        </div>
 
-    </div>
+
+
+    
     <div class=" counters">
         <h2> Counter </h2>
         <span id="counter" value="counter"> </span>
-        <div id="counter">  </div>
-       <button id="reset" type="button" name="reset" value="reset"><span > RESET</span></button>
+        <div id="counter"> </div>
+        <button id="reset" type="button" name="reset" value="reset"><span> RESET</span></button>
     </div>
 
-    <form action="greetings" method="POST">
-    
+
+
+
+
+
+
+
+    <h3 id="heading">{{messages}} </h3>
 
     </form>
+</div>
 
- 
-
-    <h3 id="heading"> </h3>
-
-
-   {{!-- <script src="factory-function.js"></script>
+    {{!--
+    <script src="factory-function.js"></script>
     <script src="greet.js"></script> --}}
 
 </body>
