--- a/views/greets.handlebars
+++ b/views/greets.handlebars
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/greet.css">
+  <title>Document</title>
+</head>
+<body>
   <h1>Greeted names</h1>
 <table>
  <h2>Names </h2>
@@ -10,9 +20,28 @@
 {{/each}}
       
  </tr>
+  
+</body>
+</html> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
    
 
    
 
   
+
+
 
