--- a/public/css/greet.css
+++ b/public/css/greet.css
@@ -1,25 +1,21 @@
-* {
+body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     background-color: #A280B9;
-
-}
-
-.main {
-   
     width: 100%;
     text-align: center;
     display: flex;
     flex-direction: column;
-    margin-top: 150px;
+    
  justify-content: center;
  align-items: center;
 
-    
 }
+
+
 .Enter{
     
         border-radius: 18px;
