--- a/views/countedNames.handlebars
+++ b/views/countedNames.handlebars
@@ -1,6 +1,17 @@
-
-<h1>The greetings</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="css/greet.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1>The greetings</h1>
 {{#if sentence}}
 
 {{sentence}}
 {{/if}}
+</body>
+</html>
