--- a/views/countedNames.handlebars
+++ b/views/countedNames.handlebars
@@ -8,7 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+  
     <h1>The greetings</h1>
+
+   <div class="arrowed">
+     <button type=""> HOME </button>
+
+<button type="">NEXT PAGE </button>
+</div>
 {{#if sentence}}
 
 {{sentence}}
