--- a/public/css/greet.css
+++ b/public/css/greet.css
@@ -63,10 +63,19 @@ h3{
     padding-left: 50px;
 }
 
-button {
+.button {
     padding: 5px;
 }
-
+.arrows{
+   
+    padding: 20px;
+    border-radius: 20px; 
+    justify-content:space-between;
+}
+.arrowed{
+    padding: 20px;
+    border-radius: 20px; 
+}
 .reset{
     margin-top: 50px;
  cursor: pointer;
@@ -119,6 +128,7 @@ button {
     padding: 5px;
     border-radius: 10px;
 }
+
 .counters{
     margin-top: 30px;
   
