--- a/views/countedNames.handlebars
+++ b/views/countedNames.handlebars
@@ -12,9 +12,16 @@
     <h1>The greetings</h1>
 
    <div class="arrowed">
+    <a href="/">
      <button type=""> HOME </button>
 
-<button type="">NEXT PAGE </button>
+</div>
+
+<div class="arrowed">
+</a>
+<a href="/greets">
+<button type="">PREVIOUS PAGE </button>
+</a>
 </div>
 {{#if sentence}}
 
