--- a/views/greets.handlebars
+++ b/views/greets.handlebars
@@ -13,10 +13,9 @@
   <h1>Greeted name</h1>
   
   <div class="arrows">
-
+    <a href="/">
   <button type=""> HOME </button>
-
-<button type="">NEXT PAGE </button>
+</a>
 
 </div>
 <table>
