--- a/public/css/greet.css
+++ b/public/css/greet.css
@@ -31,10 +31,10 @@ body {
     margin-top: 50px;
 }
 
-h2{
-    margin-top: 30px;
+/* h2{
+    margin-top: 20px;
    
-}
+} */
 h3{
     padding-left: 20px;
 }
@@ -47,10 +47,10 @@ h3{
     justify-content: space-around;
 }
 .textName{
-    margin-top: 10px;
+    margin-top: 1px;
 }
 .container{
-    margin-top: 50px;
+    margin-top: 30px;
     font-stretch: semi-condensed;
     font:bold;
 }
@@ -59,7 +59,7 @@ h3{
 }
 .counters{
     display: flex;
-    margin-top: 30px;
+    margin-top: 20px;
     padding-left: 50px;
 }
 
@@ -77,7 +77,7 @@ h3{
     border-radius: 20px; 
 }
 .reset{
-    margin-top: 50px;
+    margin-top: 20px;
  cursor: pointer;
     border-color: aquamarine;
  
