--- a/views/greeted.handlebars
+++ b/views/greeted.handlebars
@@ -24,7 +24,7 @@
  <tr>
  {{#each ourNames}}
    
-<h2><br> <a class="table" href="/counted/{{@this}}">{{@this}}</br></a></h2>
+<h2><br> <a class="table" href="/counted/{{names}}">{{names}}</br></a></h2>
   
 {{/each}}
       
