--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -71,7 +71,7 @@
     <h3 class="error">{{message}}</h3>
 
     {{#if messages}}
-    <h4> {{messages.error}}</h4>
+    <h4 class="errored"> {{messages.error}}</h4>
 
     {{/if}}
 
@@ -79,7 +79,7 @@
 
 
 
-    <a class="table" href="/greeted" name="actionType">
+    <a class="table" href="/greeted" method:'actionType' name="actionType">
 
         <div class="button">
             <button type="">GREETED NAMES</button>
