--- a/public/css/greet.css
+++ b/public/css/greet.css
@@ -58,11 +58,13 @@ h3{
 }
 .greet{
     margin-top: 10px;
-    border-color: red;
+    border-color: rgb(224, 140, 140);
+    
 }
 .greetMe{
     margin-top: 20px;
-    border-color: red;
+    border-color: rgb(224, 140, 140);
+    border-radius:8px;
 }
 .counters{
     display: flex;
@@ -72,7 +74,7 @@ h3{
 
 .button {
     padding: 5px;
-    border-color: red;
+    border-color: rgb(224, 140, 140);
     border-radius: 10px; 
 }
 .arrows{
@@ -80,34 +82,21 @@ h3{
     padding: 20px;
     border-radius: 20px; 
     justify-content:space-between;
+    border-color: rgb(224, 140, 140);
 }
 .arrowed{
     padding: 20px;
     border-radius: 20px; 
+    border-color: rgb(224, 140, 140);
 }
 .reset{
 
  cursor: pointer;
-    border-color: red;
+    border-color: rgb(224, 140, 140);
+    border-radius: 8px; 
  
 }
-.table{
-    color: black;
-    margin-top: 20px;
-    
 
-}
-.btn{
-    background: none;
-    outline: none;
-    border: 2px solid palegreen;
-    padding: 5px;
-    border-radius: 10px;
-}
-.span{
-    font-size: 20px;
-    padding:10px
-}
 @media screen and (max-width:400px){
 .body{
     background-color: #A280B9;
