--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
                 <input type="text" class="Enter" placeholder="Name" name="enterName" {{capturedNames}}>
 
 
-                <h3 id="counter" name="counting">{{counters}} </h3>
+                <h3 class="counter" name="counting">{{counters}} </h3>
 
             </div>
             <div class="lingo">
