--- a/public/css/greet.css
+++ b/public/css/greet.css
@@ -35,8 +35,8 @@ body {
     margin-top: 20px;
 }
 
-h3{
-    padding-left: 20px;
+.h3{
+    padding-left: 10px;
 }
 .button{
    margin-top: 10px;
@@ -55,6 +55,7 @@ h3{
     margin-top: 30px;
     font-stretch: semi-condensed;
     font:bold;
+   
 }
 .greet{
     margin-top: 10px;
@@ -70,6 +71,10 @@ h3{
     display: flex;
     margin-top: 20px;
     padding-left: 50px;
+   
+}
+.counter{
+    padding-left: 10px;
 }
 
 .button {
